--- a/k8s-specifications/worker-deployment.yaml
+++ b/k8s-specifications/worker-deployment.yaml
@@ -1,8 +1,11 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1 
 kind: Deployment
 metadata:
   name: worker
 spec:
+  selector:
+    matchLabels:
+      app: worker
   replicas: 1
   template:
     metadata:
