--- a/k8s-specifications/db-deployment.yaml
+++ b/k8s-specifications/db-deployment.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
       - image: postgres:9.4
         name: db
+        env:
+        - name: POSTGRES_PASSWORD
+          value: "password"
         volumeMounts:
         - mountPath: /var/lib/postgresql/data
           name: db-data
